[package]
name = "types"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = "=0.0.42-alpha5"
holochain_wasm_utils = "=0.0.42-alpha5"
holochain_json_derive = "=0.0.17"
holochain_json_api = "=0.0.17"
strum_macros = "0.15.0"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]