[package]
name = "utils"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
multihash = "0.8.0"
rust-base58 = "=0.0.4"
hdk = "=0.0.38-alpha14"
holochain_wasm_utils = "=0.0.38-alpha14"
holochain_json_api = "=0.0.17"
types = { path = "../types"}

[lib]
path = "src/lib.rs"
crate-type = ["lib"]
