[package]
name = "core"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
chrono = "0.4"
multihash = "*"
maplit = "1.0.1"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.12-alpha1" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.12-alpha1" }
holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.12-alpha1" }
itertools = "0.8"
regex = "*"
lazy_static = "1.2.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
